﻿v9.9.609 (2022-06-04)
- Fixed exception error while adding missing channels.

v9.9.608 (2022-05-26)
- Hotfix.

v9.9.607 (2022-05-26)
- Updated translations.
- Bug fixes.

v9.9.606 (2022-05-22)
- Optimized performance.
- Bug fixes.

v9.9.605 (2022-05-09)
- Fixed channel listing for service CMore.
- Bug fixes.

v9.9.604 (2022-05-05)
- Added support for TheMovieDb extended information.
- Fixed service CMore.

v9.9.603 (2022-04-24)
- Fixed service Polsat GO.
- Updated translations.

v9.9.602 (2022-04-22)
- Fixed channel access for service Polsat GO BOX.
- Other improvements.

v9.9.601 (2022-04-18)
- Bug fixes.
- Other improvements.

v9.9.6 (2022-04-15)
- Hotfix.

v9.9.5 (2022-04-13)
- Added catchup for service TVPGO.
- Fixed service PlayerPL parsing error.
- Fixed encodings.
- Optimized performance.
- Added playlist caching.
- Fixed local timezone.
- Bug fixes.

v9.9.4 (2022-03-02)
- Fixed error while using record services.
- Fixed encoding issues Python 2.7.

v9.9.3 (2022-02-27)
- Optimized performance.

v9.9.2 (2022-02-16)
- Updated service TVP GO.
- Updated headers.
- Bug fixes.

v9.9.1 (2022-02-13)
- Fixed crash while downloading on CoreELEC and LibreELEC OS.
- Other improvements.

v9.9.0 (2022-02-12)
- Fixed RSS feed.

v9.8.9 (2022-02-11)
- Added option to adjust to local time, for universal timezone. 
- Added debug mode.
- Add channel to group shortcut.
- Optimized performance.

v9.8.8 (2022-01-24)
- Bug fixes.

v9.8.7 (2022-01-12)
- Added InputStream Adaptive shortcut in settings.
- Optimized performance.

v9.8.6 (2022-01-04)
- Fixed EPG table refresh on record completion.
- Fixed service Polsat GO access groups.
- Added WP Pilot DRM support.
- Bug fixes.

v9.8.5 (2021-12-12)
- Added .xz file support.
- Bug fixes.

v9.8.4 (2021-12-07)
- Fixed add channel error.

v9.8.3 (2021-12-06)
- Fixed service Telia Play catchup.
- Bug fixes.

v9.8.2 (2021-11-28)
- Added built-in addon browser.
- Bug fixes.

v9.8.1 (2021-11-16)
- Fixed service Polsat GO and Polsat GO Box.
