@@ -2,7 +2,7 @@
 <addon
     id="script.mtvguide"
     name="m-TVGuide [COLOR gold][B]EPG[/B][/COLOR]"
-    version="9.9.609-beta.3"
+    version="9.9.609-beta.4"
     provider-name="Mods-kodi">
   <requires>
     <import addon="xbmc.addon" version="17.0.0"/>
@@ -44,6 +44,7 @@
     <news>v9.9.609 (2022-06-04)
 - Fixed exception error while adding missing channels.
 - Fixed grouping error.
+- Fixed login for services C More and Telia Play.
 
 v9.9.608 (2022-05-26)
 - Hotfix.
